--- a/css/find-artists.css
+++ b/css/find-artists.css
@@ -309,13 +309,29 @@
     width: 100%;
     height: 100%;
     z-index: 1;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-.artist-image img {
+.artist-avatar-circle {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    z-index: 2;
+    border: 3px solid #ffffff;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+}
+
+.artist-avatar-circle img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border: none;
+    display: block;
 }
 
 .artist-info {
